[package]
name = "checkhost"
version = "0.1.0"
authors = ["Joshue Abance (tbdsux) <euhsojlogro112002@gmail.com>"]
description = "A CLI and API Wrapper for https://check-host.net"
edition = "2021"
license = "MIT"


[dependencies]
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
url = "2.3.1"
